# TU-GO-TO-WORK

./: .gitignore  README.md  auto_attendance.py  build_windows.bat  main.py  pyproject.toml  register_account.py  remove_startup.py  requirements.txt
.github/workflows/: build-and-release.yml  build-windows.yml
