[project]
name = "tu-go-to-work"
version = "0.1.0"
description = "윈도우 시작 시 자동으로 출근 확인 알럿을 표시하는 프로그램"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyinstaller>=5.0.0",
    "pywin32"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyinstaller]
onefile = true
windowed = true
name = "TUGoToWork"
icon = null
add-data = []
hidden-imports = ["tkinter", "winreg", "ctypes"]
